# holiday-planner

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  manage.py  pyproject.toml  pytest.ini
smoke_tests/: test_get_endpoints.py
src/holiday_planner/: asgi.py  settings.py  urls.py  wsgi.py
src/planner/: models.py  serializers.py  urls.py  views.py  weather_api.py
src/planner/management/commands/: load_dummy_data.py
src/planner/migrations/: 0001_initial.py
src/planner/tests/: test_models.py  test_serializers.py  test_views.py
